--- a/conteudo/css/game-custom.css
+++ b/conteudo/css/game-custom.css
@@ -27,6 +27,7 @@
 .card:hover {
     box-shadow: 5px 5px 6px #333;
 }
+
 .card p {
     color: black !important;
 }
@@ -45,8 +46,16 @@
 }
 
 .game-itens-container {
-    margin: 0 !important; padding: 25px 0;border-bottom-left-radius: 15px;border-bottom-right-radius: 15px;background-color: #ffbc62;max-width: calc(100% - 24px);margin-left: auto !important;margin-right: auto !important;
+    margin: 0 !important;
+    padding: 25px 0;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background-color: #ffbc62;
+    max-width: calc(100% - 24px);
+    margin-left: auto !important;
+    margin-right: auto !important;
 }
+
 .game-descricao-img img {
     width: 150px;
     position: absolute;
@@ -60,14 +69,15 @@
     line-height: initial;
     text-align: center;
 }
+
 .game-body .slot {
     height: auto;
     width: 100%;
     background-color: transparent;
     border: 3px dashed white;
-      border-top-color: white;
-      border-top-style: dashed;
-      border-top-width: 1px;
+    border-top-color: white;
+    border-top-style: dashed;
+    border-top-width: 1px;
     color: #333;
     display: inline-block;
     text-align: center;
@@ -79,12 +89,14 @@
     max-width: 230px;
     margin: auto;
     display: block;
-    
-  }
+
+}
+
 .game-titulo p {
     padding-bottom: 0px;
     margin-bottom: 0px;
-  }
+}
+
 .game-titulo {
     background-color: white;
     padding: 10px;
@@ -96,7 +108,8 @@
     max-width: 230px;
     display: block;
     margin: auto;
-  }
+}
+
 .ui-droppable p {
     font-size: 18px;
 }
@@ -109,15 +122,17 @@
     flex-wrap: wrap;
     margin: 25px 0;
 }
+
 #content-game {
     max-width: 928px;
     margin: auto;
     margin-top: 45px;
 }
-.modal-header {
+
+/* .modal-header {
     background-color: #008086;
 color: white;
-}
+} */
 
 /* Para não permitir o drag de novo de objetos que já estão posições corretas */
 .slot * {
@@ -131,23 +146,29 @@ color: white;
 }
 
 @media (max-width:560px) {
+
     /* #bgmodal-acerto .modal-content{
         margin-top: -200%;
     }
     #bgmodal-erro .modal-content{
         margin-top: -200%;
     } */
-    #slots .col-12.col-md-4.mt-3.mb-3{
+    #slots .col-12.col-md-4.mt-3.mb-3 {
         margin-bottom: 5px !important;
         margin-top: 5px !important;
     }
-    #slots .row, #cardPile{
+
+    #slots .row,
+    #cardPile {
         padding-top: 5px !important;
         margin-bottom: 5px !important;
     }
-    .game-body .slot, .game-titulo{
+
+    .game-body .slot,
+    .game-titulo {
         max-width: 100%;
     }
+
     .card {
         display: inline;
     }
