--- a/conteudo/css/06.css
+++ b/conteudo/css/06.css
@@ -26,10 +26,17 @@ iframe {
     width: 90%;
 }
 
-li {
+.olho li {
     margin-bottom: 0.8em;
     list-style-image: url(../images/06/marcador.png);
     padding-top: 10px;
+}
+
+li {
+    margin-bottom: 0.8em;
+    list-style-image: none;
+    padding-top: 10px;
+    font-weight: bold;
 }
 
 .modal-principal {
@@ -115,10 +122,7 @@ h4 {
 .painel-higienizacao {
     position: relative;
     display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    align-items: center;
+    background: url('../images/06/');
 }
 
 .bt-higienizacao {
