--- a/conteudo/css/02.css
+++ b/conteudo/css/02.css
@@ -99,9 +99,10 @@ li {
     max-width: 100%;
     width: 750px;
     height: 451px;
-    position: relative;
-    top: -200px;
+    top: 835px;
+    left: 345px;
     border-radius: 8px;
+    border: 1px;
     margin: auto;
     background: linear-gradient(0deg, #DFDFDF, #DFDFDF),
         linear-gradient(0deg, #E4E4E4, #E4E4E4);
@@ -121,6 +122,19 @@ li {
     margin: auto;
     margin-top: 40px;
     margin-bottom: 40px;
+}
+
+.btn-final {
+    text-align: center;
+}
+
+.moldura img {
+    filter: drop-shadow(#333 1px 3px 3px);
+}
+
+.moldura figcaption,
+.legenda {
+    font-size: 12px;
 }
 
 table.senac th {
