--- a/conteudo/css/04.css
+++ b/conteudo/css/04.css
@@ -347,7 +347,6 @@ li {
     background-color: #28adb0 !important;
     color: #ffffff !important;
     margin-right: 0;
-
 }
 
 .nav-tabs li a:hover,
@@ -367,6 +366,7 @@ li {
 .nav-tabs {
     margin-bottom: 0;
     width: 100%;
+    border-bottom: 1px solid #ffffff;
 }
 
 .tab-content>.tab-pane {
@@ -390,7 +390,6 @@ li {
 .tab-content {
     padding: 20px;
     border-radius: 0 0 20px 20px;
-    overflow: hidden;
 }
 
 a,
