--- a/conteudo/css/game-custom.css
+++ b/conteudo/css/game-custom.css
@@ -1,10 +1,8 @@
 /* Interativo drag n drop */
-
 .game-body {
-    background-color: #50D7E2;
+    background-color: #28a1a4;
     border: 5px solid #fff;
     border-radius: 20px;
-    /* margin: 100px 0px 30px; */
 }
 
 .card {
@@ -29,7 +27,7 @@
 }
 
 .card p {
-    color: #fff !important;
+    color: #0b3b4b !important;
 }
 
 
@@ -50,20 +48,21 @@
     padding: 25px 0;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
-    background-color: #96e7ed;
+    background-color: #50c9d4;
     max-width: calc(100% - 24px);
     margin-left: auto !important;
     margin-right: auto !important;
 }
 
 .game-descricao-img img {
-    width: 150px;
+    width: 100px;
     position: absolute;
-    top: -55px;
+    top: 0px;
+    left: 14px;
 }
 
 .game-descricao p {
-    color: #333 !important;
+    color: #0b3b4b !important;
     font-size: 1.15rem;
     font-weight: 500;
     line-height: initial;
@@ -78,7 +77,7 @@
     border-top-color: white;
     border-top-style: dashed;
     border-top-width: 1px;
-    color: #333;
+    color: #0b3b4b;
     display: inline-block;
     text-align: center;
     padding-bottom: 22px;
@@ -101,7 +100,7 @@
     background-color: white;
     padding: 10px;
     text-align: center;
-    color: #333;
+    color: #0b3b4b;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     font-weight: bold;
@@ -145,30 +144,16 @@
     margin-top: 45px;
 }
 
-/* .modal-header {
-    background-color: #008086;
-color: white;
-} */
-
-/* Para não permitir o drag de novo de objetos que já estão posições corretas */
 .slot * {
     pointer-events: none;
     touch-action: none;
 }
 
-/* Para não exibir pra onde o usuário vai levar o card. */
 .slot .gu-transit {
     display: none;
 }
 
 @media (max-width:560px) {
-
-    /* #bgmodal-acerto .modal-content{
-        margin-top: -200%;
-    }
-    #bgmodal-erro .modal-content{
-        margin-top: -200%;
-    } */
     #slots .col-12.col-md-4.mt-3.mb-3 {
         margin-bottom: 5px !important;
         margin-top: 5px !important;
